infra/k8s/auth-mongo-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
  labels:
    app: auth-mongo
spec:
  ports:
    - port: 27017
      name: mongodb
  clusterIP: None
  selector:
    app: auth-mongo

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-mongo
spec:
  serviceName: "auth-mongo-srv"
  replicas: 3
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:5.0.5
          command:
            - mongod
            - "--replSet"
            - rs0
            - "--bind_ip_all"
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-persistent-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
