infra/k8s/userprofiles-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofiles-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-profiles
  template:
    metadata:
      labels:
        app: user-profiles
    spec:
      containers:
        - name: user-profiles
          image: yonraz/ag-user-profiles
---
apiVersion: v1
kind: Service
metadata:
  name: user-profiles-srv
spec:
  selector:
    app: user-profiles
  type: ClusterIP
  ports:
    - name: user-profiles
      protocol: TCP
      port: 8080
      targetPort: 8080
