infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    spec.ingressClassName: "nginx"
spec:
  rules:
    - host: ag.dev
      http:
        paths:
          - path: /elasticsearch
            pathType: Prefix
            backend:
              service:
                name: elasticsearch
                port:
                  number: 9200
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - path: /graphql
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/profiles
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-profiles-srv
                port:
                  number: 8080
